// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageCard should render correctly 1`] = `
<div
  className="message-card"
  style={
    Object {
      "backgroundColor": "#2b999e",
    }
  }
>
  <div />
  <p
    className="message"
  >
    Test message
  </p>
  <div
    className="head"
  >
    <div
      className="username"
    >
      Autor desconhecido
    </div>
  </div>
</div>
`;

exports[`MessageCard shows avatar when it is given 1`] = `
<div
  className="message-card"
  style={
    Object {
      "backgroundColor": "#2b999e",
    }
  }
>
  <div />
  <p
    className="message"
  >
    Second test message
  </p>
  <div
    className="head"
  >
    <div
      className="avatar"
      style={
        Object {
          "backgroundImage": "url(localhost)",
        }
      }
    />
    <div
      className="username"
    >
      Autor desconhecido
    </div>
  </div>
</div>
`;
